<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="simple_menu_option">Simple</string>
    <string name="advanced_menu_option">Advanced</string>
    <string name="about_menu_option">About</string>
    <string name="exit_menu_option">exit</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="cclicked">Registers reseted</string>
    <string name="about">Author: Lukasz Klimkiewicz\nIndex number: 222467\nVersion: 1.0.0</string>
    <string name="division_error">Unable to divide by zero</string>
    <string name="sqrt_error">Square root doesn\'t exist</string>
    <string name="result_too_big">Result too big</string>
    <string name="invalid_operation">Invalid operation</string>
</resources>