<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="simpleClicked"
        android:text="@string/simple_menu_option" />

    <Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="advancedClicked"
        android:text="@string/advanced_menu_option" />

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="aboutClicked"
        android:text="@string/about_menu_option" />

    <Button
        android:id="@+id/button23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="exitClicked"
        android:text="@string/exit_menu_option" />
</LinearLayout>